<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/basic_space">

        <Button
            android:id="@+id/showLinearHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_linear_horizontal" />

        <Button
            android:id="@+id/showLinearVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_linear_vertical" />

        <Button
            android:id="@+id/showLinearVerticalWithWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_linear_vertical_with_weight" />

        <Button
            android:id="@+id/showLinearVerticalWithGravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_linear_vertical_with_gravity" />


        <Button
            android:id="@+id/showFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_frame_layout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
